[metadata]
name = gitchangelog
version = attr: gitchangelog.gitchangelog.__version__
author = Valentin Lab
author_email = valentin.lab@kalysto.org
description = generates a changelog file from a local git checkout
long_description = file: README.rst, CHANGES.rst
url = http://github.com/vaab/gitchangelog
license = BSD
license_files = LICENSE
classifiers =
    Programming Language :: Python
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Version Control
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
install_requires =
    mako
    pystache @ git+https://github.com/sarnold/pystache@0.5.4-1
include_package_data = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gitchangelog = gitchangelog.gitchangelog:main

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
test =
    minimock
    nose
    coverage
    pylint
ci =
    codecov

[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = gitchangelog
#cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
