[metadata]
name = %%name%%
version = %%version%%
summary = %%description%%
description-file =
    README.rst
    CHANGELOG.rst
license_file = LICENSE
requires_dist =

## sdist info
author = %%author%%
author_email = %%email%%
home_page = http://github.com/vaab/%%name%%
license = BSD 3-Clause License
classifier =
    Programming Language :: Python
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Version Control
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[backwards_compat]
include_package_data = True


[files]
packages_root = src
packages =
    %%name%%


[entry_points]
console_scripts =
    gitchangelog = gitchangelog.gitchangelog:main


[bdist_wheel]
universal = 1


[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = gitchangelog
#cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE


[flake8]
ignore = E116,E262,E266
max-line-length = 120
max-complexity = 10
