[metadata]
name = gitchangelog
version = attr: gitchangelog.gitchangelog.__version__
author = Valentin LAB
author_email = valentin.lab@kalysto.org
description = gitchangelog generates a changelog thanks to git log.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
license_file = LICENSE
url = http://github.com/vaab/gitchangelog
classifier =
    Programming Language :: Python
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Version Control
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages: find:
include_package_data = True
python_requires = >= 3.6
install_requires = setuptools

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gitchangelog = gitchangelog.gitchangelog:main

[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = gitchangelog
#cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE


[flake8]
ignore = E116,E262,E266
max-line-length = 120
max-complexity = 10
